// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Invalid APIs (can't be parsed) > invalid Swagger version (1.2) 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "ENUM must be equal to one of the allowed values
(2.0)

  1 | {
> 2 |   "swagger": "1.2",
    |              ^^^^^ Did you mean 2.0 here?
  3 |   "info": {
  4 |     "version": "1.0.0",
  5 |     "title": "old version",",
    },
  ],
  "specification": "Swagger",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (can't be parsed) > invalid Swagger version (3.0) 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "ENUM must be equal to one of the allowed values
(2.0)

  1 | {
> 2 |   "swagger": "3.0",
    |              ^^^^^ Did you mean 2.0 here?
  3 |   "info": {
  4 |     "version": "1.0.0",
  5 |     "title": "newer version",",
    },
  ],
  "specification": "Swagger",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (can't be parsed) > not a valid API definition 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "Supplied schema is not a valid API definition.",
    },
  ],
  "specification": null,
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (can't be parsed) > not a valid OpenAPI 3.1 definition 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "REQUIRED must have required property 'paths'

> 1 | {
    | ^ paths is missing here!
  2 |   "openapi": "3.1.0",
  3 |   "info": {
  4 |     "version": "1.0.0",",
    },
  ],
  "specification": "OpenAPI",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (can't be parsed) > numeric API version (instead of a string) 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be string

  2 |   "swagger": "2.0",
  3 |   "info": {
> 4 |     "version": 1,
    |                ^ type must be string
  5 |     "title": "old version",
  6 |     "description": "This swagger spec is invalid because version 1.2 is not supported"
  7 |   },",
    },
  ],
  "specification": "Swagger",
  "valid": false,
  "warnings": [],
}
`;

exports[`Invalid APIs (can't be parsed) > numeric Swagger version (instead of a string) 1`] = `
{
  "additionalErrors": 0,
  "errors": [
    {
      "message": "TYPE must be string

  1 | {
> 2 |   "swagger": 2,
    |              ^ type must be string
  3 |   "info": {
  4 |     "version": "1.0.0",
  5 |     "title": "old version",",
    },
  ],
  "specification": "Swagger",
  "valid": false,
  "warnings": [],
}
`;
